# raylib_ttf_aliased

./: .gitignore  CMakeLists.txt  README.md  make-release.bat
src/: main.cpp
